[package]
name = "litmus"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.9.0"
clap = { version = "4.5.27", features = ["derive", "env"] }
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "net", "macros"] }
